Добавил возможность обновления тудушки по частям через PATCH
